Fixed overflow bug and added a float option

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 .tlkio-channel { 
+  float: none;
   position: relative;
   min-height: 400px;
   max-width: 100%;
